fix active users add max-height on mobile

--- a/src/components/ChatBoxReceiver/ChatBoxReceiver.css
+++ b/src/components/ChatBoxReceiver/ChatBoxReceiver.css
@@ -14,3 +14,12 @@
     border-radius: 10px;
     max-height: 60%;
 }
+
+
+/* Media query for small screens */
+@media only screen and (max-width: 768px) {
+    .p-receiver {
+        max-width: 80%;
+        max-height: none;
+    }
+}
