--- a/src/components/UsersList/UsersList.css
+++ b/src/components/UsersList/UsersList.css
@@ -7,6 +7,9 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: #ece5dd;
 }
 
 .active-user {
@@ -27,8 +30,12 @@
     background: #2fa72f;
 }
 
+/* Media query for small screens */
 @media only screen and (max-width: 768px) {
     .active-users {
+        max-height: 200px;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
     }
 }
